middleware/kyverno/full/policies/other/timescaledb.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: timescaledb-exporter-add-security-context
  annotations:
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: StatefulSet
    policies.kyverno.io/minversion: 1.4.3
    policies.kyverno.io/description: "Update timescaledb exporter security context to fix policies violations"
spec:
  failurePolicy: Fail
  rules:
    - name: add-security-context-to-exporter
      match:
        any:
          - resources:
              kinds:
                - StatefulSet
              namespaces:
                - timescaledb-${cluster_region}
              names:
                - "timescaledb"
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                securityContext:
                  seccompProfile:
                    type: RuntimeDefault
                containers:
                  - name: postgres-exporter
                    securityContext:
                      capabilities:
                        drop:
                          - ALL
                        add: ["NET_BIND_SERVICE"]
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: timescaledb-exporter-add-pgbackrest-security-context
  annotations:
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: StatefulSet
    policies.kyverno.io/minversion: 1.4.3
    policies.kyverno.io/description: "Update timescaledb pgbackrest security context to fix policies violations"
spec:
  failurePolicy: Fail
  rules:
    - name: timescaledb-exporter-add-pgbackrest-security-context
      match:
        any:
          - resources:
              kinds:
                - StatefulSet
              namespaces:
                - timescaledb-${cluster_region}
              names:
                - "timescaledb"
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                containers:
                  - name: pgbackrest
                    securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                        drop:
                          - ALL
